clusters/management/homer/manifests/homer-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homer-service
  name: homer-service
  namespace: homer-dashboard
spec:
  ports:
  - name: "8080"
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: homer
  type: ClusterIP
