clusters/management/homer/manifests/homer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer-ingress
  namespace: homer-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: dashboard.mkc.home.mirceanton.com
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: homer-service
              port:
                number: 80
